force-app/main/default/objects/Pricebook_Entry__c/Pricebook_Entry__c.object-meta.xml
<CustomObject>
    <label>Pricebook Entry</label>
    <nameField>
        <displayFormat>PBE-{00000}</displayFormat>
        <label>PBE No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>