force-app/main/default/objects/Pricebook_Entry__c/fields/Customer_Model_Product__c.field-meta.xml
<CustomField>
    <fullName>Customer_Model_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Model Product</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Customer_Model_Product__c.Country_Code__c</field>
            <operation>equals</operation>
            <valueField>$User.Sales_Region__c</valueField>
        </filterItems>
        <filterItems>
            <field>$User.Sales_Region__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Customer_Model_Product__c</referenceTo>
    <relationshipLabel>Pricebook Entry</relationshipLabel>
    <relationshipName>Pricebook_EntryToCustomerModel</relationshipName>
    <type>Lookup</type>
</CustomField>