force-app/main/default/objects/Pricebook_Entry__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Price_Book__r.Name + IF( ISBLANK( Customer_Model_Product__c ) , Product__r.Name , Customer_Model_Product__r.Name + TEXT( Customer_Model_Product__r.Country_Code__c ) ) + TEXT(Cost_Type__c)</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>