force-app/main/default/objects/Pricebook_Entry__c/fields/Indicative_Price__c.field-meta.xml
<CustomField>
    <fullName>Indicative_Price__c</fullName>
    <label>Indicative Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>