force-app/main/default/objects/Pricebook_Entry__c/fields/Invoice_Price__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Price__c</fullName>
    <label>Invoice Price(Delete)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>