force-app/main/default/objects/Pricebook_Entry__c/fields/MSRP__c.field-meta.xml
<CustomField>
    <fullName>MSRP__c</fullName>
    <label>MSRP</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>