force-app/main/default/objects/Pricebook_Entry__c/fields/Non_OCY__c.field-meta.xml
<CustomField>
    <fullName>Non_OCY__c</fullName>
    <label>Non O/C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>