force-app/main/default/objects/Pricebook_Entry__c/fields/OCY__c.field-meta.xml
<CustomField>
    <fullName>OCY__c</fullName>
    <description>Only sales department (TV) use</description>
    <label>O/C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>