force-app/main/default/objects/Pricebook_Entry__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <label>Price Book</label>
    <referenceTo>Pricebook__c</referenceTo>
    <relationshipLabel>Pricebook Entry</relationshipLabel>
    <relationshipName>Pricebook_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>