force-app/main/default/objects/Pricebook_Entry__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Pricebook Entry</relationshipLabel>
    <relationshipName>Pricebook_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>