force-app/main/default/objects/Pricebook_Entry__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <formula>IF( ISBLANK( Customer_Model_Product__c ) , TEXT(Product__r.Product_Line__c) , TEXT(Customer_Model_Product__r.Product_Line__c) )</formula>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>