force-app/main/default/objects/Pricebook_Entry__c/validationRules/CurrencyTypeMustSameAsPriceBook.validationRule-meta.xml
<ValidationRule>
    <fullName>CurrencyTypeMustSameAsPriceBook</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(CurrencyIsoCode) &lt;&gt; TEXT(Price_Book__r.CurrencyIsoCode)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>The currency type must be the same as that in the price book.</errorMessage>
</ValidationRule>