force-app/main/default/objects/Pricebook_Entry__c/validationRules/ProductOrCustomerModelProductMustChoose.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductOrCustomerModelProductMustChoose</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Product__c ) &amp;&amp;  ISBLANK(Customer_Model_Product__c ) &amp;&amp; 
ISBLANK( External_ID__c )</errorConditionFormula>
    <errorMessage>You must choose a product or customer model product for the price book entry.</errorMessage>
</ValidationRule>